2001-11-04  Dan Mueth  <d-mueth@uchicago.edu>

	Fixed a few typos and updated the maintainer line.

	* advisory_board.html:
	* board_of_directors.html:
	* charter.html:
	* directory.html:
	* documentation.html:
	* election-2000.html:
	* electionrules.html:
	* elections.html:
	* executive_director.html:
	* faq-ln7.html:
	* faq.html:
	* index.html:
	* membership-form.html:
	* membership-policy.html:
	* membership.html:
	* organization.html:
	* template.html:

2001-11-04  Dan Mueth  <d-mueth@uchicago.edu>

	Adding organization section for the web page.

	* advisory_board.html:
	* board_of_directors.html:
	* charter.html:
	* directory.html:
	* documentation.html:
	* election-2000.html:
	* electionrules.html:
	* elections.html:
	* executive_director.html:
	* faq.html:
	* index.html:
	* membership-form.html:
	* membership-policy.html:
	* membership.html:
	* organization.html:
	* template.html:

2001-11-03  Dan Mueth  <d-mueth@uchicago.edu>

	Created documentation section for the web page.

	* charter.html:
	* faq.html:
	* index.html:

2001-11-03  Dan Mueth  <d-mueth@uchicago.edu>

	Cleaning up organization of election materials.

	* election-2000.html:
	* electionrules.html:
	* elections.html:
	* index.html:
	* template.html:

2001-11-03  Dan Mueth  <d-mueth@uchicago.edu>

	Cleaning up organization of membership materials.  Moved 
 	membership.html to membership-list.html so we can use membership.html
	for general membership info.

	* charter.html:
	* directory.html:
	* elections.html:
	* faq.html:
	* index.html:
	* membership-form.html:
	* membership-policy.html:
	* membership.html:
	* template.html:

2001-11-03  Dan Mueth  <d-mueth@uchicago.edu>

	Added a directory and template file.

	* charter.html:
	* directory.html:
	* elections.html:
	* faq.html:
	* index.html:
	* membership-form.html:
	* membership-policy.html:
	* template.html:

2001-11-03  Dan Mueth  <d-mueth@uchicago.edu>

	Updating news items.

	* index.html:

2001-10-23  Dan Mueth  <d-mueth@uchicago.edu>
