@@ -30,6 +30,7 @@
       <center>
        <a href="elections.html">General Information</a> :&nbsp;
        <a href="electionrules.html">Rules & Timeline</a> :&nbsp;
+       <a href="overview.html">Director Overview</a> :&nbsp;
        2000
       </center>
      </td>
