@@ -30,6 +30,7 @@
       <center>
        <a href="elections.html">General Information</a> :&nbsp;
        Rules & Timeline :&nbsp;
+       <a href="overview.html">Director Overview</a> :&nbsp;
        <a href="election-2000.html">2000</a>
       </center>
      </td>
