@@ -30,6 +30,7 @@
       <center>
        General Information :&nbsp;
        <a href="electionrules.html">Rules & Timeline</a> :&nbsp;
+       <a href="overview.html">Director Overview</a> :&nbsp;
        <a href="election-2000.html">2000</a>
       </center>
      </td>
