@@ -1,42 +1,85 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2//EN">
-<HTML>
-<HEAD>
-	<TITLE></TITLE>
-	<META NAME="GENERATOR" CONTENT="StarOffice/5.1 (Linux)">
-	<META NAME="AUTHOR" CONTENT="Bart Decrem">
-	<META NAME="CREATED" CONTENT="20001003;11090400">
-	<META NAME="CHANGEDBY" CONTENT="Bart Decrem">
-	<META NAME="CHANGED" CONTENT="20001004;13080900">
-</HEAD>
-<BODY BGCOLOR="#ffffff">
-<P ALIGN=CENTER><B>Overview of the GNOME Foundation Board of
-Directors </B>
-</P>
-<P><BR><BR>
-</P>
-<P><U><B>GNOME Foundation Overview</B></U></P>
-<P STYLE="margin-bottom: 0in">The GNOME Foundation will work to
-further the goal of the GNOME project: to create a computing platform
-for use by the general public that is completely free software.</P>
-<P STYLE="margin-bottom: 0in"><BR>
-</P>
-<P>To achieve this goal, the Foundation will coordinate releases of
-GNOME and determine which projects are part of GNOME. The Foundation
-will act as an official voice for the GNOME project, providing a
-means of communication with the press and with commercial and
-noncommercial organizations interested in GNOME software. The
-foundation may produce educational materials and documentation to
-help the public learn about GNOME software. In addition, it may
-sponsor GNOME-related technical conferences, represent GNOME at
-relevant conferences sponsored by others, help create technical
-standards for the project and promote the use and development of
-GNOME software. For more information, see <A HREF="/">The
-GNOME Foundation Web Site</A>.</P>
-<P><U><B>Becoming a Candidate for the Board of Directors</B></U></P>
-<P>If you would like to become a candidate for the Board of
-Directors, please: 
-</P>
-<OL>
+<!doctype html public "-//w3c//dtd html 4.0 transitional//en">
+<html>
+ <head>
+  <title>The GNOME Foundation: Membership Policy</title>
+ </head>
+ <body bgcolor="#FFFFFF">
+  <center>
+   <table BORDER=2 CELLPADDING=5 WIDTH="595" NOSAVE >
+    <tr VALIGN=TOP NOSAVE>
+     <td VALIGN=TOP NOSAVE>
+      <center>
+       <a href="http://www.gnome.org">
+       <img SRC="gnome.jpg" ALT="" height=250 width=198 border=0></a><img
+       SRC="text.png" ALT="The GNOME Foundation" height=198 width=354>
+      </center>
+     </td>
+    </tr>
+
+    <tr>
+     <td>
+      <center>
+       <a href="index.html">Home</a> :&nbsp;
+       <a href="organization.html">Organization</a> :&nbsp;
+       <a href="documentation.html">Documentation</a> :&nbsp;
+       <a href="membership.html">Membership</a> :&nbsp;
+       <a href="elections.html">Elections</a> :&nbsp;
+       <a href="directory.html">Directory</a>
+      </center>
+      <br>
+      <center>
+       <a href="elections.html">General Information</a> :&nbsp;
+       <a href="electionrules.html">Rules & Timeline</a> :&nbsp;
+       Director Overview :&nbsp;
+       <a href="election-2000.html">2000</a>
+      </center>
+     </td>
+    </tr>
+
+    <!-- End of Boilerplate -->
+
+    <tr>
+     <td>
+
+      <br>
+      <h2 align="center">Board of Director Overview:</h2>
+      <h2 align="center">Running and Voting for the Board of Directors</h2>
+
+      <br>
+
+      <h3>GNOME Foundation Overview</h3>
+
+      <p>
+       The GNOME Foundation will work to further the goal of the 
+       GNOME project: to create a computing platform for use by 
+       the general public that is completely free software.
+      </p>
+
+      <p>
+       To achieve this goal, the Foundation will coordinate releases 
+       of GNOME and determine which projects are part of GNOME. The 
+       Foundation will act as an official voice for the GNOME project, 
+       providing a means of communication with the press and with 
+       commercial and noncommercial organizations interested in GNOME 
+       software. The foundation may produce educational materials and 
+       documentation to help the public learn about GNOME software. In 
+       addition, it may sponsor GNOME-related technical conferences, 
+       represent GNOME at relevant conferences sponsored by others, help 
+       create technical standards for the project and promote the use and 
+       development of GNOME software. For more information, see 
+       <A HREF="http://foundation.gnome.org">The GNOME Foundation Web 
+       Site</A>.
+      </p>
+
+      <br>
+
+      <h3>Becoming a Candidate for the Board of Directors</h3>
+
+      <p>
+       If you would like to become a candidate for the Board of Directors, 
+       please: 
+      </p>
+      <OL>
 	<LI><P>Read this document.</P>
 	<LI><P>Read the GNOME Foundation charter
 	(<A HREF="/charter.html">http://foundation.gnome.org/charter.html</A>).</P>
@@ -48,15 +91,18 @@ Directors, please:
 	with a description of how you have contributed to GNOME and why you
 	want to be on the Board of Directors. (Deadline: Nov 8, 2001) 
 	</P>
-</OL>
-<P><BR><BR>
-</P>
-<P><U><B>Partial List of Tasks of the Board of Directors </B></U>
-</P>
-<P>The Board of Directors must perform a broad set of both technical
-and non-technical tasks including: 
-</P>
-<OL>
+       </OL>
+
+      <br>
+
+      <h3>Partial List of Tasks of the Board of Directors</h3>
+
+      <p>
+       The Board of Directors must perform a broad set of both technical
+       and non-technical tasks including: 
+      </p>
+
+      <OL>
 	<LI><P>Help set overall direction for GNOME.</P>
 	<LI><P>Identify and resolve problems in GNOME.  Identify weak points
                and opportunities for improvement and work toward improving GNOME in
@@ -91,36 +137,48 @@ and non-technical tasks including:
                community, and helping to bring their suggestions before the Board.</P>
 	<LI><P>Work with companies who would like to learn more about GNOME
 	       and define how they can help and work with GNOME.</P>
-</OL>
-<P><U><B>Diversity of the Board of Directors</B></U></P>
-<P>The Board of Directors should reflect the diversity of the GNOME
-project, including leaders of the core GNOME technologies, volunteer
-contributors as well as representatives of companies which are making
-major contributions to GNOME, individuals from various geographic
-regions, and representatives of other aspects of GNOME. 
-The Board is tasked with addressing a diverse set of problems and challenges
-and will function best if the Board members are equally diverse in their skill
-set and expertise.
-</P>
-<P><BR><BR>
-</P>
-<P><U><B>Qualities of a Good Director </B></U>
-</P>
-<P>A good director will have the following characteristics: 
-</P>
-<OL>
+       </OL>
+
+      <br>
+
+      <h3>Diversity of the Board of Directors</h3>
+
+      <p>
+       The Board of Directors should reflect the diversity of the GNOME
+       project, including leaders of the core GNOME technologies, volunteer
+       contributors as well as representatives of companies which are making
+       major contributions to GNOME, individuals from various geographic
+       regions, and representatives of other aspects of GNOME. 
+       The Board is tasked with addressing a diverse set of problems and 
+       challenges and will function best if the Board members are equally 
+       diverse in their skill set and expertise.
+      </p>
+
+      <br>
+
+      <h3>Qualities of a Good Director</h3>
+
+      <p>
+       A good director will have the following characteristics: 
+      </p>
+
+      <OL>
 	<LI><P>Be a good leader.</P>
 	<LI><P>Be willing and able to dedicate a significant amount of time to
 	GNOME Foundation work.</P>
 	<LI><P>Be an active GNOME contributor who tracks the day-to-day
 	happenings of GNOME.</P>
-</OL>
-<P><BR><BR>
-</P>
-<P><U><B>Director Requirements</B></U></P>
-<P>All directors must be willing to: 
-</P>
-<OL>
+      </OL>
+
+      <br>
+
+      <h3>Director Requirements</h3>
+
+      <p>
+       All directors must be willing to: 
+      </p>
+
+      <OL>
 	<LI><P>Respect confidentiality of private discussions with
 	corporations who are interested in working with the GNOME
 	Foundation.</P>
@@ -133,6 +191,24 @@ set and expertise.
 	<LI><P>Act on behalf of all GNOME contributors in the best interest
 	of GNOME, and not solely represent the interests of a specific
 	company or constituency.</P>
-</OL>
-</BODY>
-</HTML>
+      </OL>
+
+
+     </td>
+    </tr>
+
+    <!-- Start of Boilerplate -->
+    <tr>
+     <td>
+      <center><font size=-1>This site is maintained by
+      <a href="mailto:membership@gnome.org">the GNOME Foundation Membership and Elections Committee</a>
+      and was designed by <a href="mailto:jpsc@users.sourceforge.net">JP
+      Schnapper-Casteras</a> and <a href="mailto:bart@eazel.com">Bart Decrem</a>.</font></center>
+     </td>
+    </tr>
+   </table>
+  </center>
+
+ </body>
+</html>
+
