@@ -1,3 +1,13 @@
+2001-11-08  Dan Mueth  <d-mueth@uchicago.edu>
+
+	Integrating overview.html into the the web site, since it was
+	left out during my integration work last week.
+
+	* election-2000.html:
+	* electionrules.html:
+	* elections.html:
+	* overview.html:
+
 2001-11-04  Dan Mueth  <d-mueth@uchicago.edu>
 
 	Fixed a few typos and updated the maintainer line.
